--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
+@import url(./root.css);
+
 .box{
     border-radius: 16px;
     width: 100%;
-    height: 400px;
-    background-color: white;
+    background-color: var(--white);
     margin: 20px 0;
     /* flex */
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    overflow-y: auto;
 }
+.box-cont{height: 400px;}
 .data{
     height: 200px;
     width: 200px;
@@ -16,7 +20,34 @@
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
+    /*DELETE INPUT NUMBER ARROWS*/
 }
-
+h1{
+    text-shadow: 5px 5px 10px #f5ff37;
+    color: #fdffd8;
+}
+.list-vector-li:hover{
+    background-color: #f1f1f1;
+}
+footer{
+  background: linear-gradient(to bottom, white, #504f4f);
+}
+.my-vectors{
+  background-color: #676767e2;
+}
+.my-calcs{
+  background-color: #085908df;
+}
+.my-cont{
+  box-shadow: 5px 5px 100px #dddab7;
+}
+.btn-g1 button{
+  background-color: #7999c9;
+  color: var(--white);
+}.btn-g1 button:hover{background-color: #8cabda;}
+.btn-g2 button{
+  background-color: #6ab08c;
+  color: var(--white);
+}.btn-g2 button:hover{background-color: #75c39b;}
